Update the test

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,6 @@
   "tasks": {
     "cli": "deno --unstable run -A cli.ts",
     "dev": "deno --unstable run -A cli.ts dev",
-    "test": "deno --unstable test -A"
+    "test": "deno --unstable test -A --no-check"
   }
 }
