--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,9 @@
-name: test
+name: Test
 
 on:
-  pull_request_target:
+  pull_request:
+    branches:
+      - main
   workflow_call:
   workflow_dispatch:
 
