--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,4 +58,4 @@ jobs:
           project: ./test
 
       - name: Test
-        run: julia ./test/runtests.jl
+        run: julia --project ./test ./test/runtests.jl
