--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,5 +57,7 @@ jobs:
         with:
           project: test
 
-      - name: Test
-        run: julia --project=test test/runtests.jl
+      - name: Run test
+        uses: julia-actions/julia-runtest@v1
+        with:
+          project: test
