Revert "Try using julia-runtest"
This reverts commit dd95fa98cce8bfd41d44be9c96cb2b8801436f38.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,5 @@ jobs:
         with:
           project: test
 
-      - name: Run test
-        uses: julia-actions/julia-runtest@v1
-        with:
-          project: test
+      - name: Test
+        run: julia --project=test test/runtests.jl
