Use --color=yes for julia

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,4 +58,4 @@ jobs:
           project: test
 
       - name: Test
-        run: julia --project=test test/runtests.jl
+        run: julia --color=yes --project=test test/runtests.jl
