--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Install Wrangler
         run: npm i @cloudflare/wrangler -g
 
+      - name: Test Wrangler
+        run: wrangler dev examples/hono/index.ts
+
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
         with:
