--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,9 +53,7 @@ jobs:
           node-version: 16.x
 
       - name: Install Wrangler
-        run: |
-          npm install -g wrangler@2.1.6
-          wrangler -h
+        run: npm install -g wrangler@2.1.6
 
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
@@ -63,9 +61,7 @@ jobs:
           version: 1.8.1
 
       - name: Install dependencies
-        uses: julia-actions/julia-buildpkg@v1
-        with:
-          project: test
+        run: julia --color=yes --project=test -e 'using Pkg; Pkg.build()'
 
       - name: Test
         run: julia --color=yes --project=test test/runtests.jl
