--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,5 +3,6 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 StringManipulation = "892a3eda-7b42-436c-8928-eab12a02cf0e"
 
 [compat]
+HTTP = "1.4"
 StringManipulation = "0.3"
 julia = "1.8"
