--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "install": "deno install -f -q -A --name brawler --root . cli.ts",
+    "build": "deno install -f -q -A --name brawler --root . cli.ts",
     "test": "julia --project=test test/runtests.jl",
     "dev": "deno lint && deno fmt && deno task test"
   }
