--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,3 +65,7 @@ jobs:
 
       - name: Test
         run: julia --color=yes --project=test test/runtests.jl
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
+          CLOUDFLARE_SUBDOMAIN: ${{ secrets.CLOUDFLARE_SUBDOMAIN }}
