ci: use workflow_call

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,12 @@ on:
       - main
     paths-ignore:
       - '**.md'
+  workflow_call:
   workflow_dispatch:
 
 jobs:
   check:
+    name: Check
     runs-on: ubuntu-latest
 
     steps:
@@ -28,6 +30,7 @@ jobs:
         run: deno lint
 
   test:
+    name: Test
     needs: check
 
     strategy:
