--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Release
+name: CI
 
 on:
   push:
@@ -9,7 +9,13 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    name: Test
+    uses: ./.github/workflows/test.yml
+
   release:
+    name: Release
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
