--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.25.4
+          deno-version: v1.25.4 # @denopendabot denoland/deno
 
       - name: Format
         run: deno fmt --check
@@ -50,20 +50,20 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.25.4
+          deno-version: v1.25.4 # @denopendabot denoland/deno
 
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16.17
+          node-version: 16.17.0 # @denopendabot nodejs/node
 
       - name: Install Wrangler
-        run: npm install -g wrangler@2.1.6
+        run: npm install -g wrangler@2.1.6 # @denopendabot cloudflare/wrangler2
 
       - name: Setup Julia
         uses: julia-actions/setup-julia@v1
         with:
-          version: 1.8.1
+          version: 1.8.1 # @denopendabot JuliaLang/julia
 
       - name: Install dependencies
         run: julia --color=yes --project=test -e 'using Pkg; Pkg.build()'
