ci(release): use denomantic-release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,31 +16,10 @@ jobs:
 
   release:
     name: Release
+    if: github.repository_owner == 'hasundue'
     needs: test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
+      - uses: hasundue/denomantic-release@0.8.1
         with:
-          deno-version: v1.25.4
-
-      - name: Install ghlog
-        run: deno install -A https://pax.deno.dev/hasundue/ghlog/ghlog.ts 
-
-      - name: Generate Release Notes
-        run: ghlog ${{ github.repository }} -s | xargs -I {tag} echo "NEW_TAG={tag}" >> $GITHUB_ENV
-
-      - name: Release
-        id: release
-        if: ${{ env.NEW_TAG != 'UNRELEASED' }}
-        uses: ncipollo/release-action@v1
-        with:
-          tag: '${{ env.NEW_TAG }}'
-          name: '${{ env.NEW_TAG }}'
-          bodyFile: 'CHANGELOG.md'
-          draft: false
-          token: ${{ secrets.GITHUB_TOKEN }}
+          denopendabot: app
