--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,19 +58,4 @@ jobs:
           node-version: v20.1.0 # @denopendabot nodejs/node
 
       - name: Install Wrangler
-        run: npm install -g wrangler@2.20.0 # @denopendabot cloudflare/wrangler2
-
-      - name: Setup Julia
-        uses: julia-actions/setup-julia@v1
-        with:
-          version: v1.9.0 # @denopendabot JuliaLang/julia
-
-      - name: Install dependencies
-        run: julia --color=yes --project=test -e 'using Pkg; Pkg.build()'
-
-      - name: Test
-        run: julia --color=yes --project=test test/runtests.jl
-        env:
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_SUBDOMAIN: ${{ secrets.CLOUDFLARE_SUBDOMAIN }}
+        run: npm install -g wrangler@3.5.1 # @denopendabot npm:wrangler
