ci(test): add deno task test to ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,3 +59,6 @@ jobs:
 
       - name: Install Wrangler
         run: npm install -g wrangler@3.5.1 # @denopendabot npm:wrangler
+
+      - name: Run tests
+        run: deno task test
