ci(test): set CLOUDFLARE_API_TOKEN

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,3 +62,5 @@ jobs:
 
       - name: Run tests
         run: deno task test
+        env:
+          - CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
